--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -39,7 +39,7 @@
 	var NA_CONCEPT_ID = 1175;
     var PATIENT_IS_ENROLLED_HIV = <lookup expression="kenyaemr.hasHivUniquePatientNumber()" />;
     var PATIENT_IS_REPORTED_HIV = "<lookup expression="fn.latestObs(159427).getValueCoded()"/>";
-    var HAART_START_DATE = "<lookup expression="fn.latestObs(163784).getValueDatetime()"/>";
+    //var HAART_START_DATE = "<lookup expression="fn.latestObs(163784).getValueDatetime()"/>";
     var DATE_OF_DELIVERY = "<lookup expression="fn.latestObs(5599).getValueDatetime()"/>";
     var PLACE_OF_DELIVERY = "<lookup expression="fn.latestObs(1572).getValueCoded()"/>";
     var MODE_OF_DELIVERY = "<lookup expression="fn.latestObs(5630).getValueCoded()"/>";
@@ -52,8 +52,6 @@
         //Cacx screening method  cacx-screening-method
         jq('#cacx-screening-method').hide();
         jq('#cacx-screening select').change(onCacxResultChange);
-        //On HAART validation
-        jq('#patient-on-haart').hide();
         //partner testing
         jq('#partner-hiv-status select').prop("disabled", true);
         jq('#partner-tested select').change(onPartnerTestedChange);
@@ -85,17 +83,7 @@
         }else{
             jq('#hiv-status:text').val('Not available');
         }
-        if(HAART_START_DATE !=""){
-            getField('haart-start-date.value').val(HAART_START_DATE);
-            jq('#tbl-haart-given-anc').hide();
-            jq('#tbl-haart-given-mat').hide();
-            jq('#patient-on-haart').show();
-        }else{
-            getField('haart-start-date.value').val("");
-            jq('#tbl-haart-given-anc').show();
-            jq('#tbl-haart-given-mat').show();
-            jq('#patient-on-haart').hide();
-        }
+
         //Maternal history prepopulation
         if(DATE_OF_DELIVERY !=""){
             getField('delivery-date.value').val(DATE_OF_DELIVERY);
@@ -793,29 +781,6 @@
 								answerConceptIds="105281AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,74250AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								answerLabels="Cotrimoxazole,Dapsone,None"
 								style="radio" id="prophylaxis-used"/>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div id="patient-on-haart" class="ke-warning">HAART already started</div>
-						</td>
-					</tr>
-					<tr id="tbl-haart-given-anc">
-						<td>HAART given to mother at ANC?</td>
-						<td><obs
-								conceptId="5576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="yes_no"
-								id="haart-given-anc"/>
-						</td>
-					</tr>
-					<tr id="tbl-haart-given-mat">
-						<td>HAART given to mother during delivery?</td>
-						<td><obs
-								conceptId="159595AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="yes_no"
-								id="haart-given-mat"/>
-						</td>
-						<td>HAART start date : </td>
-						<td><obs id="haart-start-date"
-								 conceptId="163784AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
 						</td>
 					</tr>
 					<tr>
