--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -1036,6 +1036,22 @@
 			</fieldset>
 		</td>
 	</tr>
+	<tr>
+		<td colspan="2">
+			<fieldset>
+				<legend>Next Appointment </legend>
+				<table align="center" width="100%" class="tb1">
+					<tr>
+						<td>Next appointment date:  &#160;&#160;&#160;&#160;&#160;&#160;&#160;
+
+							<obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" />
+							<span style="color:red;"><strong>*</strong></span>
+						</td>
+					</tr>
+				</table>
+			</fieldset>
+		</td>
+	</tr>
 <tr>
 	<td>
 		<legend>Clinical Notes</legend>
