--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -773,12 +773,14 @@
 									<td>Urine Microscopy</td>
 									<td>
 										<obs conceptId="56AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="3" cols="38"/>
+									<span class="value"><recentObs conceptId="56AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>Urine Leukocyte Esterase Test</td>
 									<td>
 										<obs conceptId="161441AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+										<span class="value"><recentObs conceptId="161441AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 								<tr>
@@ -788,6 +790,7 @@
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Negative,Trace - 15,One Plus(+) - 30,Two Plus(++) - 100,Three Plus(+++) - 300,Four Plus(++++) - 1000"/>
 										mg/dL
+										<span class="value"><recentObs conceptId="1875AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>Urinary Ketone</td>
 									<td>
@@ -795,6 +798,7 @@
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Negative,Trace - 5,One Plus(+) - 15,Two Plus(++) - 50,Three Plus(+++) - 150"/>
 										mg/dL
+										<span class="value"><recentObs conceptId="161442AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 								<tr>
@@ -803,6 +807,7 @@
 										<obs conceptId="159734AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Normal,Trace,One Plus(+),Two Plus(++),Three Plus(+++),Four Plus(++++)"/>
+										<span class="value"><recentObs conceptId="159734AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>Urine Bile Salt Test</td>
 									<td>
@@ -810,28 +815,33 @@
 											 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Normal,Trace - 1,One Plus(+) - 4,Two Plus(++) - 8,Three Plus(+++) - 12"/>
 										mg/dL
+										<span class="value"><recentObs conceptId="161444AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 								<tr>
 									<td>Urine pH</td>
 									<td>
 										<obs conceptId="161438AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-ph"/>
+										<span class="value"><recentObs conceptId="161438AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>Urine Bile Pigment Test</td>
 									<td>
 										<obs conceptId="161443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Negative,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+										<span class="value"><recentObs conceptId="161443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 								<tr>
 									<td>Urine Specific Gravity</td>
 									<td>
 										<obs conceptId="161439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-specific-gravity"/>
+										<span class="value"><recentObs conceptId="161439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>Urine Color</td>
 									<td>
 										<obs conceptId="162106AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+										<span class="value"><recentObs conceptId="162106AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 								<tr>
@@ -840,10 +850,12 @@
 										<obs conceptId="161440AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Negative,Positive,One Plus(+),Two Plus(++)"/>
+										<span class="value"><recentObs conceptId="161440AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>Urine Turbidity</td>
 									<td>
 										<obs conceptId="162101AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+										<span class="value"><recentObs conceptId="162101AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 								<tr>
@@ -852,6 +864,7 @@
 										<obs conceptId="162096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+										<span class="value"><recentObs conceptId="162096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 								</obsgroup>
@@ -869,6 +882,7 @@
 											 id="syphilis-test-results"
 											 answerConceptIds="1229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1228AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1304AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Non Reactive,Reactive,Not Tested,Poor Sample quality"/>
+										<span class="value"><recentObs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>
 										<table class="syphilis-treated">
@@ -889,10 +903,12 @@
 									<td>BS for MPS:</td>
 									<td>
 										<obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+										<span class="value"><recentObs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>Haemoglobin:</td>
 									<td>
 										<obs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"></obs>
+										<span class="value"><recentObs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 							</table>
@@ -926,7 +942,7 @@
 												answerLabels="NO signs,TB presumed,No signs and started on INH,TB Rx,Not done (ND)"
 												style="dropdown"
 												id="tb-screening"/>
-
+										<span class="value"><recentObs conceptId="1659AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 								</tr>
 						       <tr>
@@ -955,6 +971,7 @@
 							<obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerConceptIds="1204AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1205AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1207AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4"/>
+							<span class="value"><recentObs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 						</td>
 					</tr>
 					<tr id="vl-sample">
